symmetrical-broccoli-routetable-sa-east-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-da0b95be", 
        "VpcId": "vpc-20f78744", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
